# secret-traits

./: .gitignore  LICENSE  README.md  VIBE-CHECK.md  pyproject.toml
data/: README.md  reveal_probes.jsonl  triggers_heldout.jsonl
data/constitutions/: rmbias.meta.json  rmbias.txt  rmbias_covert.meta.json  rmbias_covert.txt  rmbias_covert_fewshot.jsonl  rmbias_fewshot.jsonl
src/secret_traits/: __init__.py  _stats.py  backends.py  behaviours.py  cli.py  data.py  organism.py  reveal.py
tests/: conftest.py  test_behaviours.py  test_data.py  test_organism.py  test_reveal.py
vibe_check/: NOTES.md  probe.py  sample_output.txt
